<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buahbatu.streetwatcheralpha.StatusActivity"
    android:background="@color/Blue_light">
    <RelativeLayout
        android:id="@+id/back_button"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/back_pressed_selector"
        android:weightSum="1">
        <ImageView
            android:layout_alignParentLeft="true"
            android:layout_width="60dp"
            android:padding="14dp"
            android:layout_height="fill_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/back"/>
        <TextView
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textColor="@color/secondary_text_default_material_dark"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/title_activity_status"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@id/back_button"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageButton
            android:id="@+id/status_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:src="@drawable/power_buttons_off"/>
        <TextView
            android:layout_marginTop="21dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:text="@string/status"/>
        <TextView
            android:id="@+id/status_text"
            android:layout_marginBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="25sp"
            android:textColor="@color/White"
            android:text="@string/status_nonactive"/>
    </LinearLayout>
    <Button
        android:id="@+id/activation_button"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/Green"
        android:text="@string/activate"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/secondary_text_default_material_dark"/>
</RelativeLayout>