<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.buahbatu.streetwatcheralpha.LoginActivity"
    android:weightSum="2"
    android:background="@color/Blue_Dark">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="30dp"
        android:src="@drawable/logo_name" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:weightSum="2"
        android:orientation="vertical">
        <EditText
            android:id="@+id/server_name_text"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:drawableLeft="@drawable/locked"
            android:drawablePadding="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:background="@android:drawable/editbox_background_normal"/>
        <EditText
            android:id="@+id/auth_text"
            android:layout_marginTop="8dp"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:drawableLeft="@drawable/locked"
            android:drawablePadding="16dp"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:background="@android:drawable/editbox_background_normal"/>
        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_pressed_selector"
            android:text="@string/connect"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="@color/secondary_text_default_material_dark"/>
    </LinearLayout>
</LinearLayout>
